--- a/css/sidebarAndCatalog.css
+++ b/css/sidebarAndCatalog.css
@@ -2,9 +2,10 @@
 
 .containerMain {
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
   flex-direction: row;
-  /* max-width: 1200px; */
+  max-width: 1200px;
+  margin: auto;
 }
 
 .sidebar {
